{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 22,
  "lineage": "8e81e533-e318-3b05-59f3-b72a4a229993",
  "resources": [
    {
      "module": "module.computeSubnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7e894d88-739e-4fcc-a42a-601416b8125c/resourceGroups/soc-network-demo-rg-cnc-01/providers/Microsoft.Network/networkSecurityGroups/computeSubnet-demo-nsg-cnc-01",
            "location": "canadacentral",
            "name": "computeSubnet-demo-nsg-cnc-01",
            "resource_group_name": "soc-network-demo-rg-cnc-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.computeSubnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Allow_Bastion_Inbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "3389"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7e894d88-739e-4fcc-a42a-601416b8125c/resourceGroups/soc-network-demo-rg-cnc-01/providers/Microsoft.Network/networkSecurityGroups/computeSubnet-demo-nsg-cnc-01/securityRules/Allow_Bastion_Inbound",
            "name": "Allow_Bastion_Inbound",
            "network_security_group_name": "computeSubnet-demo-nsg-cnc-01",
            "priority": 150,
            "protocol": "Tcp",
            "resource_group_name": "soc-network-demo-rg-cnc-01",
            "source_address_prefix": "10.0.0.128/26",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network_rg",
            "module.avm-res-network-virtualnetwork.azapi_resource.vnet",
            "module.avm-res-network-virtualnetwork.azapi_update_resource.allow_drop_unencrypted_vnet",
            "module.avm-res-network-virtualnetwork.data.azurerm_client_config.this",
            "module.avm-res-network-virtualnetwork.module.subnet.azapi_resource.subnet",
            "module.avm-res-network-virtualnetwork.module.subnet.azapi_update_resource.allow_deletion_of_ip_prefix_from_subnet",
            "module.avm-res-network-virtualnetwork.module.subnet.azapi_update_resource.allow_multiple_address_prefixes_on_subnet",
            "module.avm-res-network-virtualnetwork.module.subnet.azapi_update_resource.enable_shared_vnet",
            "module.avm-res-network-virtualnetwork.module.subnet.azurerm_role_assignment.subnet",
            "module.computeSubnet_nsg.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.fw_mgmt_public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e894d88-739e-4fcc-a42a-601416b8125c/resourceGroups/soc-network-demo-rg-cnc-01/providers/Microsoft.Network/publicIPAddresses/soc-demo-fw-pip2-cnc-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.174.228.29",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "soc-demo-fw-pip2-cnc-01",
            "resource_group_name": "soc-network-demo-rg-cnc-01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.fw_public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7e894d88-739e-4fcc-a42a-601416b8125c/resourceGroups/soc-network-demo-rg-cnc-01/providers/Microsoft.Network/publicIPAddresses/soc-demo-fw-pip1-cnc-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.174.228.70",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "soc-demo-fw-pip1-cnc-01",
            "resource_group_name": "soc-network-demo-rg-cnc-01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "module": "module.fwpolicy",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/7e894d88-739e-4fcc-a42a-601416b8125c/resourceGroups/soc-network-demo-rg-cnc-01/providers/Microsoft.Network/firewallPolicies/soc-demo-fwpol-cnc-01",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "canadacentral",
            "name": "soc-demo-fwpol-cnc-01",
            "private_ip_ranges": null,
            "resource_group_name": "soc-network-demo-rg-cnc-01",
            "rule_collection_groups": [],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network_rg"
          ]
        }
      ]
    }
  ]
}